# AI-classifier

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: classifier.py  main.py  prompts.py  reporter.py  schemas.py
