[project]
name = "ai-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "BaranovskyiMykola",email = "baranovskiynick@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
