[project]
name = "ai-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "BaranovskyiMykola",email = "baranovskiynick@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
